# password-manager

./: .gitignore  README.md  requirements.txt  setup.cfg
db/: fortknox.db
src/: manager.py  secrets.py
src/libs/: crypto.py  db.py  services.py  user.py
