[metadata]
name = password-manager
version = 0.0.1
author = Rodrigo Dal Ri
author_email = rodrigodalri1995@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rodrigodalri/password_manager
project_urls =
    Bug Tracker = https://github.com/rodrigodalri/password_manager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9